# kata

./: immortal.py  kata_python.py  xor.cpp
algos/dp_intro/: CMakeLists.txt  main.cpp
codeforces/14_A_Translation/: CMakeLists.txt  main.cpp
codeforces/16_A_Flag/: CMakeLists.txt  main.cpp
codeforces/16_B_Burglar_and_matches/: CMakeLists.txt  main.cpp
codeforces/2171_A_Shizuku_Hoshikawa_and_Farm_Legs/: CMakeLists.txt  main.cpp
codeforces/2171_B_Yuu_Koito_and_Minimum_Absolute_Sum/: CMakeLists.txt  main.cpp
codeforces/22_A_Second Order Statistics/: CMakeLists.txt  main.cpp
codeforces/2_A_Winner/: CMakeLists.txt  main.cpp
codeforces/2_B_The_least_round_way/: CMakeLists.txt  main.cpp
codeforces/32_B_Borze/: CMakeLists.txt  main.cpp
codeforces/34_A_Reconnaissance_2/: CMakeLists.txt  main.cpp
codeforces/44_E_Anfisa_the_Monkey/: CMakeLists.txt  main.cpp
codeforces/4_B_Before_The_Exam/: CMakeLists.txt  main.cpp
codeforces/4_C_Registration_system/: CMakeLists.txt  main.cpp
codeforces/5_A_Chat Servers Outgoing Traffic/: CMakeLists.txt  main.cpp
codeforces/5_B_Center_Alignment/: CMakeLists.txt  main.cpp
codeforces/xx_x_unknown/x_x_unknwon2/: CMakeLists.txt  main.cpp
cpp_exercises/: menuList.c
cpp_exercises/Accelerated C++/chapter05/: fails_iters.cc
cpp_exercises/C/: PIDController.c  a.c  allocate_all.c  aoout_test.c  cache_check.c  for_vim
cpp_exercises/C/C/: 01_helloworld.c  02_hmm.c  03_primenumbers.c  04_sortarray  26_overflow.c  C.txt.c  arraytest.c  arraytest.vpj  arraytest.vpw  arraytest.vpwhistu  arraytest.vtg  averageping.c  chararray.c  chararray2.c  foo  gethostbyname.c  hashexample.c  hashtable.c  hashtest.c  hashtest2.c  logmacro.c  multiarray_char.c  multiarray_char2.c  multiarray_char3.c  multiarray_char4.c  multiarray_int.c  multiarray_int2.c  multiarrays.c  mystruct.c  pointers0.c  strcat.c  stringpointer.c  strtof.c  struct.c  structsturct.c  test.c  test2.c  test3.c
cpp_exercises/C/C/C_xml/: io1.c  kaka.xml  kaka2.xml  xml_parse_write.c
cpp_exercises/C/C/excersises/: 03_primenumbers  03_primenumbers.c  ex1.2.c
cpp_exercises/C/C/training/: pointers2.c
cpp_exercises/C_KnR/: 0-0_main.c  1-1.c  1-10.c  1-11.c  1-12.c  1-13.c  1-13_vertical.c  1-15.c  1-16.c  1-17.c  1-18.c  1-19.c  1-20.c  1-21.c  1-22.c  1-22_longlinefile  1-23.c  1-23_1.c  1-24.c  1-3.c  1-4.c  1-5.c  1-6.c  1-7.c  1-8.c  1-9.c  2-10.c  2-1_sizes.c  2-2.c  2-3.c  2-4.c  2-5.c  2-6.c  2-6_endianness.c  2-7.c  2-8.c  2-9.c  3-1.c  3-2.c  3-3.c  (+18 more)
cpp_exercises/C_KnR/4-10/: getop.c  inputBuffer.c  main.c  stack.c  stack.h  test_math.c
cpp_exercises/C_KnR/4-11/: getop.c  main.c  test_ungets.c
cpp_exercises/C_KnR/4-3/: Makefile  inputBuffer.c  main.c  stack.c
cpp_exercises/C_KnR/4-4/: Makefile  getop.c  main.c
cpp_exercises/C_KnR/4-5/: 4_3_signals.h  Makefile  getop.c  main.c  stack.c
cpp_exercises/C_KnR/4-6/: 4_3_signals.h  main.c
cpp_exercises/C_KnR/4-7/: Makefile  main.c
cpp_exercises/C_KnR/4-8/: getop.c  inputBuffer.c  main.c  stack.c  test_stack.c  test_ungets.c
cpp_exercises/C_KnR/4-9/: inputBuffer.c  main.c
cpp_exercises/dsa/avl_tree/: CMakeLists.txt  README.md  main.cpp
cpp_exercises/learncpp/ch00_intro/: CMakeLists.txt  main.cpp
cpp_exercises/learncpp/ch01_basics/: 4_double_number  4_double_number.cpp  4_variable_init.cpp  CMakeLists.txt
cpp_exercises/learncpp/ch02_functions_files/: CMakeLists.txt  external_file.cpp  external_file.h  functions  functions.cpp
cpp_exercises/learncpp/ch03_debugging/: CMakeLists.txt  README.md
cpp_exercises/learncpp/ch04_types/: CMakeLists.txt  ch04_exercises.cpp  cin_boolean.cpp  main.cpp
cpp_exercises/learncpp/ch05_constants_strings/: CMakeLists.txt  ch05_exercises.cpp  main.cpp  strings.cpp
cpp_exercises/learncpp/ch06_operators/: CMakeLists.txt  ch06_quiz.cpp  compare_double.cpp  main.cpp
cpp_exercises/learncpp/ch07a_bitwise_operators/: CMakeLists.txt  internal_external_linkage.cpp  main.cpp
cpp_exercises/learncpp/ch08_control_flow/: CMakeLists.txt  main.cpp
debugprint/: CMakeLists.txt  main.cpp
digital_sum/: Cargo.toml  a.cpp  test.rs
digital_sum/src/: main.rs
narcissistic/: Cargo.toml
narcissistic/src/: main.rs
